--- a/src/components/editor/editor.css
+++ b/src/components/editor/editor.css
@@ -84,9 +84,233 @@ enjin-editor textarea.cdx-input {
 enjin-editor .editor-partial {
   min-height: 40px;
 }
-
+enjin-editor .ce-rawtool__textarea {
+  min-height: 200px;
+  resize: vertical;
+  border-radius: 8px;
+  border: 0;
+  background-color: #1e2128;
+  font-family: Menlo, Monaco, Consolas, Courier New, monospace;
+  font-size: 12px;
+  line-height: 1.6;
+  letter-spacing: -0.2px;
+  color: #a1a7b6;
+  overscroll-behavior: contain;
+}
 @media (min-width: 651px) {
   enjin-editor .codex-editor--narrow .ce-toolbar__plus {
     left: -60px;
   }
+}
+
+/**
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
+ * @author Lea Verou
+ */
+
+code[class*="language-"],
+pre[class*="language-"] {
+  color: black;
+  background: none;
+  text-shadow: 0 1px white;
+  font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+@media print {
+  code[class*="language-"],
+  pre[class*="language-"] {
+    text-shadow: none;
+  }
+}
+
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1em;
+  margin: 0.5em 0;
+  overflow: auto;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #f5f2f0;
+}
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: 0.1em;
+  border-radius: 0.3em;
+  white-space: normal;
+}
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray;
+}
+
+.token.punctuation {
+  color: #999;
+}
+
+.token.namespace {
+  opacity: 0.7;
+}
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905;
+}
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #690;
+}
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #9a6e3a;
+  /* This background color was intended by the author of this theme. */
+  background: hsla(0, 0%, 100%, 0.5);
+}
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #07a;
+}
+
+.token.function,
+.token.class-name {
+  color: #dd4a68;
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90;
+}
+
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
+.token.italic {
+  font-style: italic;
+}
+
+.token.entity {
+  cursor: help;
+}
+
+div.prism-live {
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  flex-flow: column;
+}
+
+textarea.prism-live,
+pre.prism-live {
+  padding: 0.2rem 0.5rem;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+textarea.prism-live {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  color: transparent;
+  /* color: hsla(0,0%,50%,.4); */
+  cursor: text;
+  white-space: pre;
+  border: 0;
+  outline: none;
+  background: transparent;
+  resize: none;
+  --selection-background: hsl(320, 80%, 25%);
+  --selection-color: hsla(0, 0%, 100%, 0.8);
+}
+
+@supports (not (caret-color: black)) and (-webkit-text-fill-color: black) {
+  textarea.prism-live {
+    color: inherit;
+    -webkit-text-fill-color: transparent;
+  }
+}
+
+/* Setting specific colors is needed
+	 * because otherwise Firefox shows blank text */
+textarea.prism-live::-moz-selection {
+  background: var(--selection-background);
+  color: var(--selection-color);
+}
+
+textarea.prism-live::selection {
+  background: var(--selection-background);
+  color: var(--selection-color);
+}
+
+pre.prism-live {
+  flex: 1;
+  position: relative;
+  pointer-events: none;
+  overflow: hidden;
+  max-height: 100%;
+  --scrollbar-width: 17px;
+  padding-bottom: var(--scrollbar-width);
+  padding-right: var(--scrollbar-width);
+}
+
+pre.prism-live > code:empty::before {
+  content: " ";
 }
